--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <button type="button" class="btn btn-sm btn-outline-light" id="shop-now">Acheter maintenant</button>
             </div>
             <div class="carousel-item active">
-                <img src="images/pic1.jpg" class="d-block w-100" alt="Image 1">
+                <img src="images/pic1.jpg" loading="lazy" width="1520" height="1020" class="d-block w-100" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img src="images/pic3.jpg" class="d-block w-100" alt="Image 2">
+                <img src="images/pic3.jpg" loading="lazy" width="1520" height="1020" class="d-block w-100" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img src="images/pic4.jpg" class="d-block w-100" alt="Image 3">
+                <img src="images/pic4.jpg" loading="lazy" width="1520" height="1020" class="d-block w-100" alt="Image 3">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
