--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-4 justify-content-start">
                 <div class="image">
-                    <img src="images/logo.png" alt="Logo"  loading="lazy" width="200">
+                    <img src="images/logo.png" alt="Logo" loading="lazy" width="200" height="200">
                 </div>
             </div>
             <div class="col-12 col-md-4 justify-content-center">
